@@ -378,6 +378,14 @@ foo();
 
 #-----------------------------------------------------------------------------
 
+## name RT #37487 - complain about use of say
+## failures 1
+## cut
+
+say 'The sun is a mass of incandessent gas';
+
+#-----------------------------------------------------------------------------
+
 ##############################################################################
 #      $URL$
 #     $Date$
